이용권 추가

--- a/player/src/main/resources/templates/player.html
+++ b/player/src/main/resources/templates/player.html
@@ -35,7 +35,7 @@
     axios.post(requestUrl)
     .then(res => console.log('begin'))
     .catch((error) => {
-      console.error("error in sendBeginPlayLog", error);
+      alert("플레이어 진입에 실패했습니다.")
     });
   }
 
