--- a/player/src/main/resources/templates/videoList.html
+++ b/player/src/main/resources/templates/videoList.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+<button id="add-ticket-button">이용권 등록</button>
 <table class="table">
   <thead>
   <tr>
@@ -25,4 +27,20 @@
   </tbody>
 </table>
 </body>
+<script>
+  const addTicketButton = document.querySelector("#add-ticket-button");
+
+  addTicketButton.onclick = () => {
+    const requestUrl = '/ticket';
+
+    axios.post(requestUrl)
+    .then(res => {
+      alert("이용권 등록 완료")
+    })
+    .catch((error) => {
+      alert("이용권 등록 실패");
+    });
+  }
+
+</script>
 </html>
